[package]
name = "simple-16"
version = "0.2.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

description = "Simple-16 Integer Compression"
repository = "https://github.com/That3Percent/simple-16"
keywords = ["simple-family", "binary", "simple16", "simple9"]
categories = ["compression", "parser-implementations"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed"}


[dependencies]
firestorm = "0.3.0"